--- a/english.html
+++ b/english.html
@@ -46,7 +46,8 @@
 						
 						<p> <a href="TianEn/English/elementary/kupdf.net_oxford39s-new-english-file-elementary-workbookpdf.pdf" target="_blank">workbook</a></p>
 						<p> <a href="TianEn/English/elementary/New English File Elementary Student's Book.pdf" target="_blank">student book</a></p>
-						<p> <a href="TianEn/English/elementary/New English File Elementary Teacher's Book.pdf" target="_blank">teacher's book</a></p>
+						<p> <a href="TianEn/English/elementary/New English File Elementary Teacher's Book 1.pdf" target="_blank">teacher's book1</a></p>
+						<p> <a href="TianEn/English/elementary/New English File Elementary Teacher's Book 2.pdf" target="_blank">teacher's book2</a></p>
 						<p> <a href="TianEn/English/elementary/New English File Elementary Workbook Key.pdf" target="_blank">workbook key</a></p>
 						
 						<h2>Pre-Intermediate</h2>
