--- a/geography.html
+++ b/geography.html
@@ -178,7 +178,7 @@
 												<li><a href="english.html">English</a></li>
 												<li><a href="combined_science.html">Combined Science</a></li>
 												<li><a href="geography.html">Geography</a></li>
-												<li><a href="#">Religious Studies</a></li>
+												<li><a href="religious_studies.html">Religious Studies</a></li>
 												
 											</ul>
 										</li>
